# bmf

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  MANIFEST.in  README.md  build.sh  build_aarch64.sh  build_android.sh  build_d9.sh  build_osx.sh  build_wasm.sh  build_win_lite.sh  conda-env.yaml  coverage.sh  create_symbols.py  gosdk_version.txt  setup.py  test_pip.sh  version.sh
bmf/: CMakeLists.txt  __init__.py
bmf/builder/: __init__.py  bmf.py  bmf_graph.py  bmf_modules.py  bmf_node.py  bmf_optimizer.py  bmf_stream.py  bmf_sync.py  ff_filter.py  graph_config.py
bmf/c_modules/: CMakeLists.txt
bmf/c_modules/include/: audio_fifo.h  audio_resampler.h  av_common_utils.h  c_module.h  clock_module.h  ffmpeg_decoder.h  ffmpeg_encoder.h  ffmpeg_filter.h  fraction.hpp  go_mock_decoder.h  mock_decoder.h  pass_through_module.h  video_sync.h
bmf/c_modules/meta/: BUILTIN_CONFIG.json  GoMockDecoder.info  MockDecoder.info  clock.info  pass_through.info
bmf/c_modules/src/: audio_fifo.cpp  audio_resampler.cpp  clock_module.cpp  ffmpeg_decoder.cpp  ffmpeg_encoder.cpp  ffmpeg_filter.cpp  ffmpeg_func_registry.cpp  go_mock_decoder.cpp  mock_decoder.cpp  pass_through_module.cpp  video_sync.cpp
bmf/c_modules/test/: test_python_module.cpp
bmf/cmd/: CMakeLists.txt
bmf/cmd/include/: menu.h  trace_config_menu.h
bmf/cmd/python_wrapper/: wrapper.py
bmf/cmd/src/: menu.cpp  module_manager.cpp  run_graph.cpp  suite.cpp  trace_format_log.cpp
bmf/demo/: __init__.py
bmf/demo/LLM_video_preprocessing/: LLM_video_preprocessing.ipynb  README.md  aesmod_module.py  clip_process.py  main.py  media_info.py  module_config.json  module_utils.py  ocr_crop.py  operator_base.py  prepare_env.sh  requirement.txt  split.py
bmf/demo/VQScore/: test.py
bmf/demo/VQScore_4kpgc/: readme.md  vqscore_4kpgc_demo.py  vqscore_4kpgc_module.py
bmf/demo/aesthetic_assessment/: aesmod_bmfv3_fin.ipynb  aesmod_module.py  aesthetic_assessment_demo.py  module_utils.py  readme.md
bmf/demo/audio_robot_effect/: Readme.md  robot_effect.py  test_robot_effect.py  test_robot_effect_sync_mode.py
bmf/demo/broadcaster/: __init__.py  audiomix.py  edit_layout.py  readme.md  readme_cn.md  video_layout.py
bmf/demo/colorization_python/: Readme.md  deoldify_demo.py  deoldify_demo_colab.ipynb  py_deoldify_module.py  requirements.txt
bmf/demo/comfyui_intergration/: README.md  THIRD_PARTY_NOTICES.md  bmf_runner.py  bridge.py  execute_outputs.json  execution.py  extra_data.json  mixed_json_graph_example.py  mixed_programmatic_graph_example.py  patch_comfy.py  prompt.json  prompt_id.json  run_bmf_comfy.py  setup.sh  utils.py
bmf/demo/controlnet/: ReadMe.md  controlnet_module.py  prompt.txt  test_controlnet.py  text_module.py
bmf/demo/edit/: Readme.md  audio_mix.py  bmf_edit_python.ipynb  test_edit.py  video_concat.py
bmf/demo/face_detect/: detect_openvino_sample.py  detect_sample.py  detect_trt_sample.py  facedetect_demo_colab.ipynb  nms.py  onnx_face_detect.py  openvino_face_detect.py  test_server_detect.py  trt_face_detect.py
bmf/demo/fast_caption_module/: CMakeLists.txt  README.md  build_caption_demo.sh  download.sh  run.sh
bmf/demo/gpu_module/: CMakeLists.txt  Readme.md  crop_gpu.py  cvtcolor.cpp  gpu_module_demo_colab.ipynb  rotate_gpu.py  scale_gpu.py  test_gpu_module.py  test_video_c_module.py
bmf/demo/gpu_video_frame/: test_gpu_video_frame.py
bmf/demo/inpaint/: Readme.md  inpaint_module.py  test_inpaint.py
bmf/demo/json_param_transfer/: CMakeLists.txt  cpp_module.cpp  json_param_transfer.py  python_module.py
bmf/demo/llm_caption/: README.md  llm_caption.py  model_loader.py  test_llm_caption.py
bmf/demo/maxine_module/: CMakeLists.txt  README.md  maxine_module.cpp  maxine_module.h  test_maxine_module.py
bmf/demo/one_to_n_performance/: README.md  one_to_n_transcode.py  perf_compare.sh  runffmpegbygraph.py
bmf/demo/predict/: onnx_sr.py  predict_sample.py  predict_trt_sample.py  trt_sr.py
bmf/demo/pytorch_module/: test_torch_module.py  torch_padding_module.py
bmf/demo/sd_upscaler/: README.md  py_sdsr4_module.py  sdsr4_demo.py
bmf/demo/transcode/: README.md  bmf_transcode_demo.ipynb  compare.py  test_transcode.py  trans_and_dump_rawvideo.py  transcode.py
bmf/demo/video_analyzer/: caption_module.py
bmf/demo/video_enhance/: bmf-enhance-demo.ipynb  composition_module.py  enhance_demo.py  enhance_module.py  (+2 more)
bmf/docs/: CMakeLists.txt  Page_Analyse.md  Page_Backend.md  Page_BasicConcepts.md  Page_Bmfcli.md  Page_Ecosys.md  Page_Edit.md  Page_Examples.md  Page_FFmpegCompatible.md  Page_GettingStarted.md  Page_GraphUtilization.md  Page_Installation.md  Page_Installation_EN.md  Page_Logging.md  Page_Module_develop.md  Page_RealTimeProc.md  Page_TraceTool.md  Page_Transcode.md  bmf.conf.in  bmf_layout.xml.in  structures.dox
bmf/engine/: CMakeLists.txt
bmf/ffmpeg_engine/: __init__.py  engine.py
bmf/hml/: CMakeLists.txt  buff_info.patch  unittest.sh
bmf/hmp/: .gitignore  CMakeLists.txt  setup.py.in  tracer.py
bmf/modules/: c_module.py  frame_sequencer.py  null_sink.py  pass_through.py  realtime_delay_filter.py  simple_source.py
bmf/object-c/: CMakeLists.txt
bmf/python/: CMakeLists.txt  py_bmf.cpp  py_engine.cpp  py_module_sdk.cpp  py_type_cast.h
bmf/python_modules/: CMakeLists.txt
bmf/python_sdk/: __init__.py  module.py  module_functor.py  subgraph.py  timestamp.py  trace.py  utils.py
bmf/sdk/: CMakeLists.txt
bmf/server/: __init__.py  server_gateway.py  server_gateway_new.py
bmf/templates/: README.md  cli.py  my_module.py  render.py  requirements.txt  utils.py
bmf/tool/: Readme.md  bmf.sh  bmf_cmd.py  graph_view.py  mem_leak.sh  test_mem_leak.py
bmf_lite/: .gitignore  CMakeLists.txt  README.md  build_android.sh  build_ios.sh  build_ohos.sh  test_android.sh  test_ohos.sh
bmf_lite/android/: build.gradle  settings.gradle  versions.gradle
bmf_lite/ci/: prepare_adbkey.sh  test_android.sh
bmf_lite/demo/: CMakeLists.txt
bmf_lite/ohos/: .clang-format  .gitignore  build-profile.json5  oh-package.json5
bmf_lite/src/: CMakeLists.txt
(+1275 files in other folders)
